feat: user login and ui behaviors (#56)
* feat: user login and ui behaviors

* added new faq

---------

Co-authored-by: Enes Çevik <enes.cevik@ciceksepeti.com>

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -18,11 +18,14 @@
   "searchInterpreter": "ابحث عن مترجم",
   "fAskedQuestions": "أسئلة مكررة",
   "thingsToKnow": "ما تحتاج معرفته حول منصة البحث عن المترجم.",
-  "becomeVolunteerHeader": "كيف يمكنني أن أصبح مترجما متطوعا؟?",
-  "becomeVolunteerBody": "لكي تصبح مترجمًا متطوعًا ، يجب عليك ملء استمارة التسجيل لمنصة البحث عن مترجم ذات الصلة وتحديد المعلومات اللازمة وتجربة الترجمة..",
-  "interpreterResponsibilitiesHeader": "ما هي المسؤوليات التي تقع على عاتقي عند الترجمة؟?",
-  "interpreterResponsibilitiesBody": "١- العمل التطوعي المبني على الإرادة: يتوقع منك كمترجم العمل بشكل تطوعي دون مطالبة بالأجر. ويعتبر هذا الأمر شائعاً في معظم المؤسسات الإنسانية والمنظمات الخيرية، حيث يتم تقديم الخدمات مجاناً.\r\n\r\n٢- الحساسية والتفهم: عند العمل كمترجم، ستتعامل مع أشخاص يعانون من حالات الطوارئ مثل الاكتئاب والقلق والخوف ولذلك يجب أن تكون حساساً ومتفهماً وتسعى لتقديم أفضل خدمة ممكنة.\r\n\r\n٣- احترام التنوع الثقافي: يجب عدم نسيان أن من تترجم لهم قد يكونون من مختلف الخلفيات الثقافية والدينية. ولذلك يتعين عليك احترام التنوع الثقافي والسعي لفهمه.\r\n\r\n٤- حماية الخصوصية: كمترجم، عليك الالتزام بحماية معلومات المراجعين الشخصية. ويجب استخدام معلومات المراجعين فقط للإجراءات الرسمية وتخزين تلك المعلومات بأمان.\r\n\r\n٥- القيام بترجمة صحيحة ومفهومة : كمترجم، يجب أن تسعى جاهداً لتحويل النص الأصلي باللغة المصدر إلى لغة الهدف بشكل صحيح وفهم بسيط. ويتضمن ذلك اختيار الكلمات الصحيحة والتراكيب النحوية الصحيحة واستخدام اللغة بشكل صحيح.",
-  "communicateOtherTranslator": "كيف يمكنني التواصل مع مترجمين آخرين أثناء الترجمة؟?",
+  "faq1Header": "ما هو مشروع \"ابحث عن مترجم\"؟",
+  "faq1Body": "يهدف مشروع 'ابحث عن مترجم' إلى إنشاء شبكة اتصال سريعة بين المستخدمين والمترجمين في حالات الطوارئ. يمكن للمترجمين المسجلين في النظام والمستخدمين التفاعل مع بعضهم البعض أو اللقاء من خلال الاتفاق المتبادل أو التواصل عبر الإنترنت.بالإضافة الى ذلك، يمكن للمستخدمين الوصول إلى الموقع الجغرافي و معلومات التواصل الخاصة بالمترجمين، أولويتنا المساهمة في اجتماع كل من المترجمين والمستخدمين.",
+  "faq2Header": "هل يمكن للجميع رؤية معلومات الاتصال الخاصة بي؟",
+  "faq2Body": "لا، فقط يتم إظهار بُعد مسافة المترجم الجغرافية المسجلة في النظام.إذا اختار المستخدم مترجمًا، يتم إرسال رسالة إلى المترجم تحتاج للموافقة عليها. إذا وافق المترجم على الرسالة في غضون 15 ثانية، يمكن للمستخدم رؤية رقم هاتف المترجم والاتصال به.",
+  "faq3Header": "هل من الضروري مشاركة معلومات الاتصال الخاصة بي مع الآخرين؟",
+  "faq3Body": "يرجى عدم الكشف عن معلوماتكم الشخصية مثل المعلومات المصرفية أو بطاقات الائتمان أو الهوية حيث يعد هذا الأمر ضروريًا لضمان أمنكم.",
+  "faq4Header": "ما هي مسؤولياتي كمترجم؟",
+  "faq4Body": "١- العمل التطوعي المبني على الإرادة: يتوقع منك كمترجم العمل بشك تطوعي دون مطالبة بالأجر. ويعتبر هذا الأمر شائعاً في معظم المؤسسات الإنسانية والمنظمات الخيرية، حيث يتم تقديم الخدمات مجاناً.\r\n\r\n٢  - الحساسية والتفهم: عند العمل كمترجم، ستتعامل مع أشخاص يعانون من حالات الطوارئ مثل الاكتئاب والقلق والخوف. ولذلك يجب أن تكون حساساً ومتفهماً وتسعى لتقديم أفضل خدمة ممكنة.\r\n\r\n٣- احترام التنوع الثقافي: يجب عدم نسيان أن من تترجم لهم قد يكونون من مختلف الخلفيات الثقافية والدينية. ولذلك يتعين عليك احترام التنوع الثقافي والسعي لفهمه.\r\n\r\n٤ - حماية الخصوصية: كمترجم، عليك الالتزام بحماية معلومات المراجعين الشخصية. ويجب استخدام معلومات المراجعين فقط للإجراءات الرسمية وتخزين تلك المعلومات بأمان.\r\n\r\n٥  - القيام بترجمة صحيحة ومفهومة : كمترجم، يجب أن تسعى جاهدا لتحويل النص الأصلي باللغة المصدر إلى لغة الهدف بشكل صحيح وفهم بسيط. ويتضمن ذلك اختيار الكلمات الصحيحة والتراكيب النحوية الصحيحة واستخدام اللغة بشكل صحيح.",
   "cantFind": "لم تجد الإجابة التي كنت تبحث عنها?",
   "reachSupport": "يرجى الاتصال بفريق الدعم لدينا.",
   "contactUsButton": "اتصل بنا",
@@ -78,5 +81,8 @@
   "interpreterListDescription2": "يمكنك الوصول إلى قائمة المترجمين من خلال الجدول أدناه. يمكنك مشاهدة ملفك الشخصي https://هنا.",
   "truthAck": "أقبل وأقر بأن المعلومات التي قدمتها صحيحة ومؤكدة ، وأنني اتخذت جميع الاحتياطات والتدابير اللازمة لمنع تلوث المعلومات والممارسات الخاطئة ، وأنني سأبلغ عن أي تغييرات وتحديثات في المعلومات التي قدمتها",
   "yourProfile": "ملفك الشخصي",
-  "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا."
+  "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
+  "editProfileDescription": "يمكنك تحديث ملفك الشخصي من https://هنا.",
+  "logout": "تسجيل الخروج",
+  "save": "حفظ"
 }
