--- a/lang/en.json
+++ b/lang/en.json
@@ -18,11 +18,14 @@
   "searchInterpreter": "Find an interpreter",
   "fAskedQuestions": "Frequently Asked Questions",
   "thingsToKnow": "Things you need to know about the Tercümanbul platform.",
-  "becomeVolunteerHeader": "How can I become a volunteer translator?",
-  "becomeVolunteerBody": "To become a volunteer translator, you need to fill out the relevant Tercümanbul platform's registration form and provide the necessary information and translation experience.",
-  "interpreterResponsibilitiesHeader": "What responsibilities do I have when translating?",
-  "interpreterResponsibilitiesBody": "1- Working based on volunteering: As a Interpreter, it is expected of you to work as a volunteer without requesting payment. This is natural since most aid organizations and humanitarian activities are done for free.\r\n\r\n2- Showing sensitivity: As an Interpreter, you are working with people who are experiencing emergency situations such as depression, anxiety, fear, etc. Therefore, you need to be sensitive and empathetic to provide the best possible service.\r\n\r\n3- Respecting cultural differences: It should not be forgotten that people may have different cultural and religious backgrounds. Therefore, it is important to respect and make an effort to understand cultural differences.\r\n\r\n4- Protecting confidentiality: As an Interpreter, you are responsible for protecting people's personal information. Therefore, you should only use their information for official purposes and keep this information secure.\r\n\r\n5- Providing accurate and understandable translations: As an Interpreter, you need to make an effort to accurately and understandably convey the source language text to the target language. This includes using the correct choice of words, grammatical structure, and proper use of language.",
-  "communicateOtherTranslator": "How can I communicate with other translators while translating?",
+  "faq1Header": "What is the Tercüman Bul Project?",
+  "faq1Body": "The Tercüman Bul Project aims to establish a rapid communication network between end-users and translators in emergency situations. Through the system, registered translators and users can interact with each other and either meet in person by mutual agreement or communicate online. Furthermore, users can access the contact details of translators and see their geographical proximity. Through the proximity function users can choose translators in close proximity and mutually accept meeting requests.",
+  "faq2Header": "Can my contact information be publicly visible?",
+  "faq2Body": "No, the system only displays the geographical distance between the translator and user. If the user selects a translator, a message is sent to the translator which requires approval. If the translator approves the message within 15 seconds, user can view the translator's phone number and initiate contact.",
+  "faq3Header": "Is it necessary to share my contact information with others?",
+  "faq3Body": "Please do not disclose personal information such as banking, credit card, or identification information as this is vital for ensuring security.",
+  "faq4Header": "What are my responsibilities as an Interpreter?",
+  "faq4Body": "1- Working based on volunteering: As a Interpreter, it is expected of you to work as a volunteer without requesting payment. This is natural since most aid organizations and humanitarian activities are done for free.\r\n\r\n2- Showing sensitivity: As an Interpreter, you are working with people who are experiencing emergency situations such as depression, anxiety, fear, etc. Therefore, you need to be sensitive and empathetic to provide the best possible service.\r\n\r\n3- Respecting cultural differences: It should not be forgotten that people may have different cultural and religious backgrounds. Therefore, it is important to respect and make an effort to understand cultural differences.\r\n\r\n4- Protecting confidentiality: As an Interpreter, you are responsible for protecting people's personal information. Therefore, you should only use their information for official purposes and keep this information secure.\r\n\r\n5- Providing accurate and understandable translations: As an Interpreter, you need to make an effort to accurately and understandably convey the source language text to the target language. This includes using the correct choice of words, grammatical structure, and proper use of language.",
   "cantFind": "Did you not find the answer you were looking for??",
   "reachSupport": "Please reach out to our support team.",
   "contactUsButton": "Get in Touch.",
@@ -78,5 +81,9 @@
   "interpreterListDescription2": "You can access the translator list from the table below. You can see your profile from https://here.",
   "truthAck": "I accept and declare that the information I have given is correct and confirmed, that I have taken all necessary precautions and measures to prevent information pollution and wrong practices, and that I will notify any changes and updates in the information I have given.",
   "yourProfile": "Your Profile",
-  "yourProfileDescription": "You can access the list of translators from https://here."
+  "yourProfileDescription": "You can access the list of translators from https://here.",
+  "editProfileDescription": "You can update your profile from https://here.",
+  "logout": "Logout",
+  "updateProfile": "Update Profile",
+  "save": "Save"
 }
