--- a/lang/kr.json
+++ b/lang/kr.json
@@ -18,11 +18,14 @@
     "searchInterpreter": "Wergêrekî bibîne",
     "fAskedQuestions": "Pirsên pir caran tên pirsîn",
     "thingsToKnow": "Tiştê ku divê hûn di derbarê platforma Wergêr Peydaker de zanîbin.",
-    "becomeVolunteerHeader": "Ez çawa dikarim bibim wergêrekî xwebexş?",
-    "becomeVolunteerBody": "Ji bo ku hûn bibin wergêrek xwebexş, divê hûn forma qeydkirinê ya platforma têkildar a Wergêr Peydaker dagirin û agahiyen lazim û tecrûbeya xwe li ser wergerê destnîşan bikin.",
-    "interpreterResponsibilitiesHeader": "Di dema wergerê de berpisiyarî yên min çine?",
-    "interpreterResponsibilitiesBody": "1-Xebatkirina li ser bingeha dilxwaziyê: Wekî wergêrekî, ji we tê hêvî kirin ku hûn bêyî daxwaza dravdanê(meaş-pere) wek dilxwazekî bixebitin.  Ev tiştekî xwezayî ye, ji ber ku gelemperî kesên di nava saziyên alîkariyê û rêxistinên mirovahî de cîh digirin, bêpere dixebitin.\r\n\r\n2- Nîşandana hestiyariyê: Dema hûn weke wergêrekî dixebitin, hûn bi kesên ku rastî rewşên awarte yên wek depresyon, fikar, tirs û hwd tên re kar dikin. Ji ber vê yekê divê hûn hestiyar û xwedî empatî bin ku baştirîn xebata/xîzmeta xwe bikin.\r\n\r\n3- Rêzgirtina cudahiyên çandî: Divê neyê ji bîr kirin ku kesên serî li we didin dibe ku xwediyê çandî û olî yên cuda bin.  Ji ber vê yekê, girîng e ku divê hûn xwedî rêzgirtin û hewldanek ji bo fêmkirin çandên cudahîbin.\r\n\r\n4- Parastina nepenîtiyê: Weke wergerêkî, hûn ji parastina agahdariya kesane ya xerîdaran berpirsiyar in.  Ji ber vê yekê, divê hûn parvekirinên wan tenê ji bo mebestên fermî bikar bînin û van parvekirinan bi babetekî ewleh biparêzin.\r\n\r\n5- Pêşkêşkirina wergeriya rast û bi hêsanî: Weke wergêr, divê hûn hewl bidin ku bi awayekî rast û hêsan nivîsa zimanê çavkanî bigihînin zimanê armanc.  Di vê yekê de bijartina peyvan ya rast, forma rêzimanî û bikaranîna ziman ya rast jî tê de heye.",
-    "communicateOtherTranslator": "Di dema wergerê de ez çawa dikarim bi wergêrên din re têkiliyê daynim?",
+    "faq1Header": "Projeya Tercüman Bul çi ye?",
+    "faq1Body": "Projeya Tercüman Bul armanc dike ku di rewşên awarte de têkîlyek ragîhandinê bilez di navbera bikarhêneran û wergêran de saz bike.  Bi saya aplîkasyonê, wergêr û bikarhênerên qeydkirî dikarin bi hev re têkilî daynin û heke li hevbikin dikarin hevbibînin an jî bi serhêl(online) bikevin têkiliyê.  Wekî din, bikarhêner dikarin bigihîjin agahdariya têkîliyê yên wergêran û dûrbûna wan a cîh bibînin. Bi fonksiyona cîh nîşandayinê xwesteka me têkîliyekê bilez di navbera bikarhêner û wergêr de dayîne.",
+    "faq2Header": "Ma ragîhandina kesane ya min wê bi gelemperî xuya bibe?",
+    "faq2Body": "Na, pergal tenê dûrahiya cîh di navbera wergêr û bikarhêner de nîşan dide.  Ger bikarhêner wergêrek hilbijart, peyamek ku pêdiviya pejiradinê dike ji wergêr re tê şandin.  Ger wergêr di nav 15 çirkeyan(saniye) de peyamê bipejirîne, bikarhêner dikare jimara têlefonê ya wergêr bibîne û têkiliyê bide destpêkirin.",
+    "faq3Header": "Ma hewce ye ku agahdariya xwe kesane bi kesên din re parve bikim?",
+    "faq3Body": "Ji kerema xwe agahdariya kesane ya wekî bank, qerta krediyê, an nasnameyê(tiştên taybet) parve nekin ji ber ku ev yek ji bo parastina ewlehiyê girîng e.",
+    "faq4Header": "Weke werger erkên min çi ne?",
+    "faq4Body": "1- Xebatkirina li ser bingeha dilxwaziyê: Wekî wergêrekî, ji we tê hêvî kirin ku hûn bêyî daxwaza dravdanê(meaş-pere) wek dilxwazekî bixebitin.  Ev tiştekî xwezayî ye, ji ber ku gelemperî kesên di nava saziyên alîkariyê û rêxistinên mirovahî de cîh digirin, bêpere dixebitin.\r\n\r\n2- Nîşandana hestiyariyê: Dema hûn weke wergêrekî dixebitin, hûn bi kesên ku rastî rewşên awarte yên wek depresyon, fikar, tirs û hwd tên re kar dikin. Ji ber vê yekê divê hûn hestiyar û xwedî empatî bin ku baştirîn xebata/xîzmeta xwe bikin.\r\n\r\n3- Rêzgirtina cudahiyên çandî: Divê neyê ji bîr kirin ku kesên serî li we didin dibe ku xwediyê çandî û olî yên cuda bin.  Ji ber vê yekê, girîng e ku divê hûn xwedî rêzgirtin û hewldanek ji bo fêmkirin çandên cudahîbin.\r\n\r\n4- Parastina nepenîtiyê: Weke wergerêkî, hûn ji parastina agahdariya kesane ya xerîdaran berpirsiyar in.  Ji ber vê yekê, divê hûn parvekirinên wan tenê ji bo mebestên fermî bikar bînin û van parvekirinan bi babetekî ewleh biparêzin.\r\n\r\n5- Pêşkêşkirina wergeriya rast û bi hêsanî: Weke wergêr, divê hûn hewl bidin ku bi awayekî rast û hêsan nivîsa zimanê çavkanî bigihînin zimanê armanc.  Di vê yekê de bijartina peyvan ya rast, forma rêzimanî û bikaranîna ziman ya rast jî tê de heye.",
     "cantFind": "Bersiva ku hûn lê digeriyan nehat dîtin?",
     "reachSupport": "Ji kerema xwe bi tîma piştgiriyê re têkilî daynin.",
     "contactUsButton": "Bikeve Têkiliyê",
@@ -78,5 +81,9 @@
     "interpreterListDescription2": "Tu dikarin lişta têrkemên ji tabloya jêrê bikî. Tu dikarin profîla xwe ji https://vir bibî.",
     "truthAck": "Ez qebûl dikim û radigihînim ku agahiyên ku min dane rast û piştrast in, ku min hemî tedbîr û tedbîrên pêwîst girtine ji bo pêşîgirtina li qirêjbûna agahdarî û kiryarên xelet, û her guhertin û nûvekirina agahdariya ku min daye ez ê ragihînim.",
     "yourProfile": "Profîla xwe",
-    "yourProfileDescription": "Hûn dikarin ji https://vir xwe bigihînin navnîşa wergêran."
+    "yourProfileDescription": "Hûn dikarin ji https://vir xwe bigihînin navnîşa wergêran.",
+    "editProfileDescription": "Hûn dikarin profîla xwe ji https://here nûve bikin.",
+    "logout": "Derkeve",
+    "updateProfile": "Profîla Nûve Bike",
+    "save": "Tomar Bike"
 }
