--- a/lang/ru.json
+++ b/lang/ru.json
@@ -18,11 +18,14 @@
   "searchInterpreter": "Найти Переводчика",
   "fAskedQuestions": "Часто задаваемые вопросы",
   "thingsToKnow": "Что вам нужно знать о платформе Tercümanbul.",
-  "becomeVolunteerHeader": "Как я могу стать переводчиком-волонтером?",
-  "becomeVolunteerBody": "Для того, чтобы стать переводчиком-волонтером, необходимо заполнить регистрационную форму соответствующей платформы Tercümanbul и указать необходимую информацию и опыт в сфере перевода.",
-  "interpreterResponsibilitiesHeader": "Какие обязанности я несу при переводе?",
-  "interpreterResponsibilitiesBody": "1- Bолонтерская Деятельность: В качестве добровольного переводчика от вас ожидается работать безвозмездно. Это является стандартным условием поскольку большинство благотворительных и Волонтерскиx организации работают бесплатно.\r\n\r\n2- Проявление чувствительности: Работая в качестве переводчика, вы будете сталкиваться с теми, которые находятся в критическом состоянии такие, как депрессия, тревога, беспокойство и страх. Поэтому вам необходимо быть чутким и эмпатичным, чтобы предоставить помощь как можно лучше.\r\n\r\n3- Уважение к культурным различиям: Не следует забывать, что клиенты могут иметь различный культурный и религиозный опыт. Поэтому важно проявлять уважение к культурным различиям и стремиться понимать их.\r\n\r\n4- Защита конфиденциальности: В качестве переводчика вы обязаны защищать конфиденциальность личной информации клиентов. Поэтому вы должны использовать информацию клиентов только для официальных целей и сохранять эту информацию в безопасности.\r\n\r\n5- Точный и понятный перевод: В качестве переводчика вы должны стараться передавать текст на целевой язык точно и понятно. Это включает правильный выбор слов, грамматическую структуру и правильную правильную подборку предложений.",
-  "communicateOtherTranslator": "Как я могу общаться с другими переводчиками в процессе перевода?",
+  "faq1Header": "Что такое проект Tercüman Bul?",
+  "faq1Body": "Целью проекта является создание быстрой системы связи между пользователями и переводчиками в случае чрезвычайных ситуаций. Зарегистрированный в системе переводчик и пользователь могут связаться между собой и согласовать встречу или общаться онлайн. Кроме того, пользователи могут получить доступ к контактным данным переводчиков и увидеть расстояние между ними. Наша задача - связать между собой ближайших переводчиков и пользователей.",
+  "faq2Header": "Могут ли все увидеть мои контактные данные?",
+  "faq2Body": "Нет, в системе переводчику показывается только расстояние до места встречи. Если пользователь выберет переводчика, ему будет отправлено сообщение с запросом на подтверждение. Если переводчик подтвердит в течение 15 секунд, пользователь увидит его контактные данные и сможет связаться с ним.",
+  "faq3Header": "Нужно ли мне делиться своими контактными данными с другими?",
+  "faq3Body": "Пожалуйста, не сообщайте личные данные, такие как банковские реквизиты, номера карт и документов. Это важно для вашей безопасности.",
+  "faq4Header": "Каковы мои обязанности как переводчика?",
+  "faq4Body": "1- Волонтерская Деятельность: В качестве добровольного переводчика от вас ожидается работать безвозмездно. Это является естественным, поскольку большинство благотворительных и волонтерских организаций работают на безвозмездной основе.\r\n\r\n2- Проявление чувствительности: Работая в качестве переводчика, вы будете сталкиваться с теми, которые находятся в критическом состоянии такие, как депрессия, тревога, беспокойство и страх. Поэтому вам необходимо быть чутким и эмпатичным, чтобы предоставить помощь как можно лучше.\r\n\r\n3- Уважение культурных различий: Следует отметить, что люди нуждающиеся в помощи, могут иметь различный культурный и религиозный опыт. Поэтому важно проявлять уважение к культурным различиям и стремиться понимать их.\r\n\r\n4- Защита конфиденциальности: В качестве переводчика вы обязаны защищать конфиденциальность персональных данных клиентов. По этой же причине, вы должны использовать, предоставленные информации клиентами, только для официальных целей и сохранять их в надежном месте.\r\n\r\n5- Точный и понятный перевод: В качестве переводчика вы должны стремиться подавать текст с оригинала на целевой язык как можно понятнее и точнее. Это как раз включает в себя правильный выбор слов, грамматическую структуру и использование языковых средств.",
   "cantFind": "Не нашли ответ, который искали?",
   "reachSupport": "Пожалуйста, свяжитесь с нашей службой поддержки.",
   "contactUsButton": "Связаться с нами",
@@ -78,5 +81,9 @@
   "interpreterListDescription2": "Список переводчиков доступен по ссылке ниже. Профиль можно посмотреть 'здесь'.",
   "truthAck": "Я принимаю и заявляю, что предоставленная мной информация верна и подтверждена, что я принял все необходимые меры предосторожности и меры для предотвращения информационного загрязнения и неправомерных действий, и что я буду уведомлять о любых изменениях и обновлениях в предоставленной мной информации.",
   "yourProfile": "Ваш профиль",
-  "yourProfileDescription": "Доступ к списку переводчиков через https://здесь."
+  "yourProfileDescription": "Доступ к списку переводчиков через https://здесь.",
+  "editProfileDescription": "Вы можете обновить свой профиль https://здесь.",
+  "logout": "Выйти",
+  "updateProfile": "Обновить профиль",
+  "save": "Сохранить"
 }
