feat: Add firebase auth ui translations

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -6,7 +6,7 @@
   "phoneNumberHelper": "من فضلك، يرجى كتابة رقم الهاتف بهذه الطريقة +90XXXXXXXXX",
   "yourLanguage": "اللغة",
   "yourLanguageHelper": "من فضلك، يرجى كتابة اللغة التي تتحدث بها",
-  "register": "تسجيل الدخول",
+  "registerText": "تسجيل الدخول",
   "iAgree": "أوافق",
   "tcpp": "معلومات حول حماية البيانات: \n \n تم إنشاء هذا التطبيق من قبل متطوعين يعملون في مجال تقنيات المعلومات من أجل جمع جهود البحث والإنقاذ والمساعدة والدعم في قاعدة بيانات مشتركة في كارثة الزلزال العظيم الذي وقع في تركيا في فبراير 6 ، 2023 ونقلها إلى المؤسسات والمنظمات المعتمدة. \n \n ستتم معالجة البيانات الشخصية تلقائيًا للأشخاص الذين تحددهم المحتاجين إلى مساعدة أو دعم، ولأسباب قانونية ، إذا كان من الضروري لحماية الحياة أو السلامة الجسدية للشخص أو أي شخص آخر ، غير قادر على التعبير عن موافقته بسبب استحالة فعلية أو أنه غير مؤهل قانونًا . \n \n ستتم معالجة البيانات الشخصية الخاصة بك بناءً على السبب القانوني الذي يجعل معالجة البيانات إلزامي لإنشاء وممارسة وحماية حق ما. وسيتم جمع المخدمات في قاعدة بيانات موجودة في الدولة وخارجها ، وسيتم مشاركتها مع منظمات البحث والإنقاذ المعتمدة مثل Afad و Akut و Kızılay ، وكذلك المنظمات غير الحكومية التي يمكنها تلبية طلبات الدعم والمساعدة ، و المترجمين ، لأغراض معالجة البيانات الشخصية.",
   "welcomeText": "الترجمة التطوعية",
@@ -84,5 +84,26 @@
   "yourProfileDescription": "يمكنك الوصول إلى قائمة المترجمين من https://هنا.",
   "editProfileDescription": "يمكنك تحديث ملفك الشخصي من https://هنا.",
   "logout": "تسجيل الخروج",
-  "save": "حفظ"
+  "save": "حفظ",
+  "signInText": "تسجيل الدخول",
+  "emailInputLabel": "البريد الإلكتروني",
+  "registerHintText": "لا يوجد حساب؟",
+  "passwordInputLabel": "كلمة السر",
+  "forgotPasswordHintText": "يرجى تقديم البريد الإلكتروني الخاص بك وسنرسل لك رابطًا لإعادة تعيين كلمة المرور",
+  "goBack": "عودة",
+  "passwordResetEmailSentText": "لقد أرسلنا لك بريدًا إلكترونيًا يحتوي على رابط لإعادة تعيين كلمة المرور الخاصة بك. يرجى التحقق من بريدك الإلكتروني.",
+  "confirmPasswordText": "تأكيد كلمة السر",
+  "accountDoesNotExist": "الحساب غير موجود",
+  "passwordIsRequiredErrorText": "كلمة السر مطلوبة",
+  "confirmPasswordIsRequiredErrorText": "يرجى تأكيد كلمة المرور",
+  "confirmPasswordDoesNotMatchErrorText": "كلمتا المرور غير متطابقتين",
+  "confirmPasswordInputLabel": "تأكيد كلمة السر",
+  "emailIsRequiredErrorText": "البريد الإلكتروني مطلوب",
+  "isNotAValidEmailErrorText": "يرجى تقديم بريد إلكتروني صحيح",
+  "wrongOrNoPasswordErrorText": "كلمة المرور غير صحيحة أو المستخدم ليس لديه كلمة مرور",
+  "signInWithGoogleButtonText": "تسجيل الدخول باستخدام جوجل",
+  "unknownError": "حدث خطأ غير معروف",
+  "accessDisabledErrorText": "تم تعطيل الوصول إلى هذا الحساب مؤقتًا",
+  "signInHintText": "هل لديك حساب بالفعل؟",
+  "emailTakenErrorText": "هناك حساب مرتبط بهذا البريد الإلكتروني مسبقًا"
 }
