--- a/lang/kr.json
+++ b/lang/kr.json
@@ -6,7 +6,7 @@
     "phoneNumberHelper": "Ji kerema xwe hejmara telefona xwe bi vî rengî binivîsin +90XXXXXXXXX",
     "yourLanguage": "Ez Baş Dizanim",
     "yourLanguageHelper": "Ji kerema xwe zimanên ku hûn baş dizanin binivîsin",
-    "register": "Qeyd Bibe",
+    "registerText": "Qeyd Bibe",
     "iAgree": "Ez razî me",
     "tcpp": "Agahiyên li ser Parastina Daneyan:\n\nEv sepan, ji hêla dildarên ku di warê teknolojiyên agahdariyê de dixebitin hatiye amadekirin. Armanca wê ew e ku hemû daxwaz û pêdiviyên kesên ji ber Erdheja mezin ya roja 06.02.2023, li Tirkiyê pêk hatiye de mexdûr bûne, li cihekî kom bike û wan agahiyan/daneyan bigihîne sazî û kesên berpirsiyar. Herwiha bi vê sepanê wê hewl bê dayîn ku xebatên lêgerîn û xelaskirinê bi awayekî organîzetir were li dar xistin.\n\nDaneyên şexsî yên kesên ku hûn bawer dikin pêdiviya wan bi arîkarî an piştgiriyê heye, heke ew kes di rewşeke wisa de bin ku nikaribin bi xwe îcazetê bidin, wê ji ber sedemên awarte, daneyê wan kesan, bi awayekî otomatik, bixweber were xebitandin. Sedemên awarte çi ne? Astengiyên huqûqî, parastina yekîtiya laş û xelaskirina can, û rewşên  wekî din yê heyatî. \n\nDaneyên we yên şexsî dê bi saya bingehên qanûnî were bikaranîn çimkî mecbûrî ye ku daneyên şexsî ji bo parastina mafên mirovan werin bikaranîn. \n\nAgahiyên ku hûn bi me re parve dikin, wê li ser serverê me yên li nava welêt û derveyî welêt werin kom kirin. Dûre wê bi saziyên berpirsiyar yên wek Afad, Akut, Kızılay re bi awayekî qismî were parve kirin. Herwiha wê ev agahî bo tîm û komên lêgrîn û xelaskirinê bê dayîn, saziyên civakî yê sivîl û wergêran re jî bi awayekî qismî were parve kirin.",
     "welcomeText": "Wergêrîya Xwebexşî",
@@ -85,5 +85,26 @@
     "editProfileDescription": "Hûn dikarin profîla xwe ji https://here nûve bikin.",
     "logout": "Derkeve",
     "updateProfile": "Profîla Nûve Bike",
-    "save": "Tomar Bike"
+    "save": "Tomar kirin",
+    "signInText": "Têkeve nav",
+    "emailInputLabel": "E-nivîs",
+    "registerHintText": "Hesab tune",
+    "passwordInputLabel": "Şîfreyê",
+    "forgotPasswordHintText": "E-nivîsa xwe bidin, em li ser hevdîtinê we bişînin da ku şîfreyê xwe were vekişandin",
+    "goBack": "Veger",
+    "passwordResetEmailSentText": "Em ji we re e-nivîsek bi girêdayî girêdana şîfreyê şandin. Ji kerema xwe e-nivîsa xwe biparêzin.",
+    "confirmPasswordText": "Şîfreya xwe piştrast bike",
+    "accountDoesNotExist": "Hesab tune",
+    "passwordIsRequiredErrorText": "Şîfreya pêwîst e",
+    "confirmPasswordIsRequiredErrorText": "Şîfreya xwe piştrast bike",
+    "confirmPasswordDoesNotMatchErrorText": "Şîfre di taybetmendiyê de nayên hevkarîkirin",
+    "confirmPasswordInputLabel": "Şîfreya xwe piştrast bike",
+    "emailIsRequiredErrorText": "E-nivîs pêwîst e",
+    "isNotAValidEmailErrorText": "E-nivîsek derbasdar pêwîst e",
+    "wrongOrNoPasswordErrorText": "Şîfreya ne rast e an jî bikarhêner şîfre nîne",
+    "signInWithGoogleButtonText": "Têkeve nav bi Google",
+    "unknownError": "Ez nizanim, têkiliyekî cuda çêbûye",
+    "accessDisabledErrorText": "Girêdana vê hesabê tûnebûye",
+    "signInHintText": "Hesaba heye?",
+    "emailTakenErrorText": "Hesab bi vî e-nivîsî tê vekirin"
 }
