--- a/lang/ru.json
+++ b/lang/ru.json
@@ -6,7 +6,7 @@
   "phoneNumberHelper": "Введите ваш номер телефона в формате +90XXXXXXXXX",
   "yourLanguage": "Бегло говорю",
   "yourLanguageHelper": "Напишите языки, которыми вы хорошо владеете.",
-  "register": "Регистрация",
+  "registerText": "Регистрация",
   "iAgree": "Подтверждаю",
   "tcpp": "Информация о защите данных:\n\nЭто приложение было создано волонтерами, работающими в сфере информационных технологий, с целью сбора аварийно-спасательных работ и запросов о помощи и поддержке в общей базе данных во время землетрясения, произошедшего в Турции 6 февраля 2023 года, и передачи их уполномоченным учреждениям и организациям.\n\nC целью помощи или поддержки, персональные данные указанных вами, будут обрабатываться автоматически, на основании законных оснований, если лицо, которое не может выразить свое согласие из-за фактической невозможности или чье согласие не имеет юридической силы, необходима для защиты его или чьей-либо жизни или физической неприкосновенности.\n\nПерсональные данные, принадлежащие вам, будут обрабатываться на том законном основании, что обработка данных является обязательной для установления, использования и защиты права.\n\nЛичные данные, такие как имя, фамилия, телефон и адрес, указанные в запросах на помощь и поддержку, которыми вы поделитесь, будут собираться в базе данных, созданной нами, серверы которые расположены в Турции и за рубежом, обработка персональных данных уполномоченными поисково-спасательными организациями такие как АФАД, Кызылай, а также неправительственные организации и переводчики, которые могут удовлетворить запросы на поддержку и помощь, будут доступны для ограниченного использования.",
   "welcomeText": "Волонтёрский Перевод",
@@ -85,5 +85,26 @@
   "editProfileDescription": "Вы можете обновить свой профиль https://здесь.",
   "logout": "Выйти",
   "updateProfile": "Обновить профиль",
-  "save": "Сохранить"
+  "save": "Сохранить",
+  "signInText": "Войти",
+  "emailInputLabel": "Электронная почта",
+  "registerHintText": "Нет аккаунта?",
+  "passwordInputLabel": "Пароль",
+  "forgotPasswordHintText": "Введите свою электронную почту и мы вышлем вам ссылку для сброса пароля",
+  "goBack": "Назад",
+  "passwordResetEmailSentText": "Мы выслали вам письмо с ссылкой для сброса пароля. Пожалуйста, проверьте свою почту.",
+  "confirmPasswordText": "Подтвердите пароль",
+  "accountDoesNotExist": "Аккаунт не существует",
+  "passwordIsRequiredErrorText": "Пароль обязателен",
+  "confirmPasswordIsRequiredErrorText": "Подтвердите свой пароль",
+  "confirmPasswordDoesNotMatchErrorText": "Пароли не совпадают",
+  "confirmPasswordInputLabel": "Подтвердите пароль",
+  "emailIsRequiredErrorText": "Электронная почта обязательна",
+  "isNotAValidEmailErrorText": "Укажите правильную электронную почту",
+  "wrongOrNoPasswordErrorText": "Неверный пароль или у пользователя нет пароля",
+  "signInWithGoogleButtonText": "Войти через Google",
+  "unknownError": "Произошла неизвестная ошибка",
+  "accessDisabledErrorText": "Доступ к этому аккаунту временно заблокирован",
+  "signInHintText": "Уже есть аккаунт?",
+  "emailTakenErrorText": "Аккаунт с этой электронной почтой уже существует"
 }
