--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,7 @@
   "phoneNumberHelper": "Please enter your phone number",
   "yourLanguage": "I Speak Fluently",
   "yourLanguageHelper": "Please write down the languages you speak fluently",
-  "register": "Register",
+  "registerText": "Register",
   "iAgree": "I agree",
   "tcpp": "Information about Data Protection:\n\n\nThis application was created by volunteers in the field of information technology to collect search and rescue operations and support requests in a common database and pass them on to authorized institutions and organizations in response to the large earthquake disaster that occurred in Turkey on February 6, 2023.\n\nPersonal information of individuals who indicate that they need help or support will be processed automatically based on the legal reason of \"Absence of consent due to actual impossibility or lack of legal recognition of consent for the protection of life or physical integrity of oneself or others\".\n\nYour personal information will be processed based on the legal reason of \"Necessity of processing data for the establishment, use or protection of a right\".\n\nThe personal information such as name, surname, telephone and address included in the support and help requests you share, will be collected in a database created and hosted by us, both domestically and abroad, and will be shared with authorized search and rescue organizations such as AFAD, Akut and Red Crescent, as well as civil society organizations capable of meeting support and assistance requests, for the purpose of processing personal data.",
   "welcomeText": "Volunteer Translator",
@@ -85,5 +85,26 @@
   "editProfileDescription": "You can update your profile from https://here.",
   "logout": "Logout",
   "updateProfile": "Update Profile",
-  "save": "Save"
+  "save": "Save",
+  "signInText": "Sign in",
+  "emailInputLabel": "Email",
+  "registerHintText": "Don't have an account?",
+  "passwordInputLabel": "Password",
+  "forgotPasswordHintText": "Provide your email and we will send you a link to reset your password",
+  "goBack": "Go back",
+  "passwordResetEmailSentText": "We've sent you an email with a link to reset your password. Please check your emails.",
+  "confirmPasswordText": "Confirm password",
+  "accountDoesNotExist": "Account doesn't exist",
+  "passwordIsRequiredErrorText": "Password is required",
+  "confirmPasswordIsRequiredErrorText": "Confirm your password",
+  "confirmPasswordDoesNotMatchErrorText": "Passwords do not match",
+  "confirmPasswordInputLabel": "Confirm password",
+  "emailIsRequiredErrorText": "Email is required",
+  "isNotAValidEmailErrorText": "Provide a valid email",
+  "wrongOrNoPasswordErrorText": "The password is invalid or the user does not have a password",
+  "signInWithGoogleButtonText": "Sign in with Google",
+  "unknownError": "An unknown error occurred",
+  "accessDisabledErrorText": "Access to this account has been temporarily disabled",
+  "signInHintText": "Already have an account?",
+  "emailTakenErrorText": "An account with this email already exists"
 }
