--- a/lang/tr.json
+++ b/lang/tr.json
@@ -6,7 +6,7 @@
   "phoneNumberHelper": "Lütfen telefon numaranızı bu şekilde yazın +90XXXXXXXXX",
   "yourLanguage": "Akıcı Şekilde Konuşuyorum",
   "yourLanguageHelper": "Lütfen akıcı bir şekilde konuştuğunuz dilleri yazınız",
-  "register": "Kayıt Ol",
+  "registerText": "Kayıt Ol",
   "iAgree": "Kabul Ediyorum",
   "tcpp": "Verilerin Korunması Hakkında Bilgilendirme:\n\nBu uygulama, 6 Şubat 2023 tarihinde Türkiye’de meydana gelen büyük deprem felaketinde, arama kurtarma çalışmaları ile yardım ve destek taleplerini ortak bir veri tabanında toplayarak yetkili kurum ve kuruluşlara aktarmak amacıyla bilişim teknolojileri alanında çalışan gönüllüler tarafından oluşturulmuştur.\n\nYardım ya da desteğe ihtiyacı olduğunu belirttiğiniz kişilerin kişisel verileri, Fiili imkânsızlık nedeniyle rızasını açıklayamayacak durumda bulunan veya rızasına hukuki geçerlilik tanınmayan kişinin kendisinin ya da bir başkasının hayatı veya beden bütünlüğünün korunması için zorunlu olması, hukuki sebebine dayanarak, otomatik yollarla işlenecektir.\n\nTarafınıza ait kişisel veriler, Bir hakkın tesisi, kullanılması ve korunması için veri işlemenin zorunlu olması, hukuki sebebine dayanarak işlenecektir.\n\nPaylaşacağınız yardım, destek taleplerinde yer alan isim, soyisim, telefon ve adres gibi kişisel veriler, tarafımızca oluşturulan ve sunucuları yurtiçi ve yurtdışında bulunan veri tabanında toplanarak, Afad, Akut, Kızılay gibi yetkili arama kurtarma kuruluşlarının yanı sıra destek ve yardım taleplerini karşılayabilecek sivil toplum kuruluşları ve Tercümanlar ile kişisel veri işleme amacı ile sınırlı olarak paylaşılacaktır.",
   "welcomeText": "Gönüllü Tercümanlık",
@@ -85,5 +85,26 @@
   "editProfileDescription": "Profilinizi https://buradan güncelleyebilirsiniz.",
   "logout": "Çıkış yap",
   "updateProfile": "Profilimi güncelle",
-  "save": "Kaydet"
+  "save": "Kaydet",
+  "signInText": "Giriş yap",
+  "emailInputLabel": "E-posta",
+  "registerHintText": "Hesabınız yok mu?",
+  "passwordInputLabel": "Parola",
+  "forgotPasswordHintText": "E-postanızı girin ve parolanızı sıfırlamak için bir bağlantı göndereceğiz",
+  "goBack": "Geri git",
+  "passwordResetEmailSentText": "Parolanızı sıfırlamak için bir bağlantı içeren bir e-posta gönderdik. Lütfen e-postalarınızı kontrol edin.",
+  "confirmPasswordText": "Parolayı onayla",
+  "accountDoesNotExist": "Hesap mevcut değil",
+  "passwordIsRequiredErrorText": "Parola gereklidir",
+  "confirmPasswordIsRequiredErrorText": "Parolanızı onaylayın",
+  "confirmPasswordDoesNotMatchErrorText": "Parolalar eşleşmiyor",
+  "confirmPasswordInputLabel": "Parolayı onayla",
+  "emailIsRequiredErrorText": "E-posta gereklidir",
+  "isNotAValidEmailErrorText": "Geçerli bir e-posta adresi girin",
+  "wrongOrNoPasswordErrorText": "Parola geçersiz veya kullanıcının parolası yok",
+  "signInWithGoogleButtonText": "Google ile giriş yap",
+  "unknownError": "Bilinmeyen bir hata oluştu",
+  "accessDisabledErrorText": "Bu hesaba erişim geçici olarak devre dışı bırakıldı",
+  "signInHintText": "Zaten bir hesabınız var mı?",
+  "emailTakenErrorText": "Bu e-posta adresiyle bir hesap zaten var"
 }
